Fix overflow for hero display header

--- a/components/homepage/Hero/Hero.module.scss
+++ b/components/homepage/Hero/Hero.module.scss
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	height: 100vh;
 	width: 100%;
-	overflow-y: hidden;
+	overflow: hidden;
 	align-items: center;
 	justify-content: space-around;
 }
